objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EvergageAction_Click_Calculate_Your_R__c</fullName>
        <description>Uses of action &apos;Click Calculate Your Results&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Calculat&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Choose_Region_an__c</fullName>
        <description>Uses of action &apos;Click Choose Region and Crop&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Choose R&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Download_PDF__c</fullName>
        <description>Uses of action &apos;Click Download PDF&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Download&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Now__c</fullName>
        <description>Uses of action &apos;Click Register Now&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Today__c</fullName>
        <description>Uses of action &apos;Click Register Today&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Homepage__c</fullName>
        <description>Uses of action &apos;Homepage&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Homepage&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Paused_Video__c</fullName>
        <description>Uses of action &apos;Paused Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Paused Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Played_Video__c</fullName>
        <description>Uses of action &apos;Played Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Played Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Calculator_Requ__c</fullName>
        <description>Uses of action &apos;Submit Calculator Request Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Calcula&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Form__c</fullName>
        <description>Uses of action &apos;Submit Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Form&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Use_Dealer_Locator_For__c</fullName>
        <description>Uses of action &apos;Use Dealer Locator Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Use Dealer Loc&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_ACN_Insights_Page__c</fullName>
        <description>Uses of action &apos;View ACN Insights Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View ACN Insig&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_AG_College_Page__c</fullName>
        <description>Uses of action &apos;View AG College Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View AG Colleg&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Download__c</fullName>
        <description>Uses of action &apos;View Article Download Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article D&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Page__c</fullName>
        <description>Uses of action &apos;View Article Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Aspire_ROI_Calcul__c</fullName>
        <description>Uses of action &apos;View Aspire ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Aspire RO&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Dealer_Locator_Pa__c</fullName>
        <description>Uses of action &apos;View Dealer Locator Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Dealer Lo&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Microessentials_R__c</fullName>
        <description>Uses of action &apos;View Microessentials ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Microesse&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Nutrient_Removal__c</fullName>
        <description>Uses of action &apos;View Nutrient Removal Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Nutrient &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Product_Page__c</fullName>
        <description>Uses of action &apos;View Product Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Product P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Speak_With_a_Rep__c</fullName>
        <description>Uses of action &apos;View Speak With a Rep page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Speak Wit&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_TR_Trial_Data_Pag__c</fullName>
        <description>Uses of action &apos;View TR Trial Data Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View TR Trial &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Video_Page__c</fullName>
        <description>Uses of action &apos;View Video Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Video Pag&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageFirstActivity__c</fullName>
        <description>First activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_acres__c</fullName>
        <description>Value of KPI &apos;Acres&apos;</description>
        <label>Evergage KPI &apos;Acres&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_einsteinClickScore__c</fullName>
        <description>Value of KPI &apos;Einstein Click Score&apos;</description>
        <label>Evergage KPI &apos;Einstein Click Score&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_einsteinOpenScore__c</fullName>
        <description>Value of KPI &apos;Einstein Open Score&apos;</description>
        <label>Evergage KPI &apos;Einstein Open Score&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EvergageSegment_9XEwd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a member of segment &apos;Visited in Last Day&apos;</description>
        <label>Evergage In Segment &apos;Visited in Last Da&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvergageSegment_jHlwm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a member of segment &apos;[SEG] - RAMO DE ATUACAO&apos;</description>
        <label>Evergage In Segment &apos;[SEG] - RAMO DE AT&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_CourtesyCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include this user as a Courtesy Copy recipients when generating contracts.</description>
        <label>Courtesy Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Approver)</relationshipLabel>
        <relationshipName>PMC_DH_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US +1</fullName>
                    <default>true</default>
                    <label>US +1</label>
                </value>
                <value>
                    <fullName>CA +1</fullName>
                </value>
                <value>
                    <fullName>BR +55</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Language__c</fullName>
        <description>Language</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_MarketingEmailConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Email Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Preferences__c</fullName>
        <label>Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access documents</fullName>
                </value>
                <value>
                    <fullName>Browse Knowledge articles</fullName>
                </value>
                <value>
                    <fullName>Manage contracts</fullName>
                </value>
                <value>
                    <fullName>Manage leads</fullName>
                </value>
                <value>
                    <fullName>Request quotes or place orders</fullName>
                </value>
                <value>
                    <fullName>Track orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountsReceivable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Contact is needed in SAP for Account Receivables.</description>
        <label>Accounts Receivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CPF__c</fullName>
        <description>States the CPF Number</description>
        <label>CPF</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClientDenied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States if Client is on Denied List</description>
        <label>Client Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Contact is needed in SAP for receiving Contract.</description>
        <label>Contract Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Counterparty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Contact is Counterparty in SAP.</description>
        <label>Counterparty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Crops__c</fullName>
        <description>Crops contact works with</description>
        <label>Crops</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_Crops</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_DigitalHubUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notes whether a Contact has DH access</description>
        <label>Digital Hub User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_InvoiceRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Contact is needed in SAP for Invoicing</description>
        <label>Invoice Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LastInteractionDate__c</fullName>
        <description>Specifies the last interaction date of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Interaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MDMVerified__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Details whether an Account has been Verified by MDM Team</description>
        <label>MDM Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_NumberOfInactivityDays__c</fullName>
        <formula>NOW() - PMC_SS_LastInteractionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Inactivity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderPlacing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Contact is needed in SAP for Order placement</description>
        <label>Order Placing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductInterests__c</fullName>
        <description>Products contact is interested in</description>
        <label>Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the result of the Contact</description>
        <label>Results</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAP_CustomerNumber__c</fullName>
        <description>Number for Contact stored in SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies the SMS Opt out preference of the Contact</description>
        <label>Marketing SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ShippingNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Status__c</fullName>
        <description>Status detailing if they are current or to-be archived</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>To be Archived</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Type__c</fullName>
        <description>Specifies the Type of the Contact</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_WhatsappOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies the Whatsapp Opt out preference of the Contact</description>
        <label>Marketing Whatsapp Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_Source__c</fullName>
        <description>Origin / Source of creation of the contact</description>
        <inlineHelpText>This field will track the source of creation 
1. Use Case for DH - to track self registration requests</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Digital Hub</fullName>
                </value>
                <value>
                    <fullName>Digital Hub - Super Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact_utm_campaign__c</fullName>
        <description>UTM Campaign field that Identifies the campaign.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_utm_content__c</fullName>
        <description>UTM Content field that Identifies the content zone, such as a call-to-action message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_utm_medium__c</fullName>
        <description>UTM Medium field that Identifies the medium, such as a search engine, a social media platform, or another platform.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_utm_source__c</fullName>
        <description>UTM Source that Identifies the source of the traffic, such as Google or AdWords. (This can be different from Lead Source.)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_utm_term__c</fullName>
        <description>UTM Term field that Identifies keywords that generate clicks.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>import_id__c</fullName>
        <description>field that are used to identify different import files</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE5</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_SS_DigitalHubUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictCheckboxesToFalse</fullName>
        <active>false</active>
        <description>The checkboxes fields that indicate the Contact needs to be created in SAP can&apos;t be unchecked once it is checked.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ),

OR(
( ISCHANGED( PMC_SS_InvoiceRecipient__c ) &amp;&amp; PMC_SS_InvoiceRecipient__c = False ),
( ISCHANGED(  PMC_SS_OrderPlacing__c  )  &amp;&amp; PMC_SS_OrderPlacing__c = False ),
( ISCHANGED(  PMC_SS_AccountsReceivable__c ) &amp;&amp; PMC_SS_AccountsReceivable__c = False ),
( ISCHANGED(  PMC_SS_Counterparty__c ) &amp;&amp; PMC_SS_Counterparty__c = False ),
( ISCHANGED(  PMC_SS_ContractRecipient__c  )  &amp;&amp; PMC_SS_ContractRecipient__c = False )
)

)</errorConditionFormula>
        <errorMessage>Once checkbox is checked, it can’t be unchecked as the Contact is already created in SAP.</errorMessage>
    </validationRules>
</CustomObject>